Fix Dashboard card spacing

--- a/src/components/Dashboard/DashboardContent/DashboardContent.scss
+++ b/src/components/Dashboard/DashboardContent/DashboardContent.scss
@@ -71,7 +71,7 @@
 			grid-template-columns: 30% 40% 30%;
 			grid-row-gap: 15px;
 			// grid-column-gap: 20px;
-			height: 330px;
+			// height: 330px;
 			// @include media("<large") {
 			// 	min-width: 90vw;
 			// 	grid-template-columns: calc((360 / 894) * 100%) calc((504 / 894) * 100%);
