--- a/src/components/Dashboard/DashboardContent/DetailDisplay/DetailDisplay.scss
+++ b/src/components/Dashboard/DashboardContent/DetailDisplay/DetailDisplay.scss
@@ -1,7 +1,7 @@
 @import "src/styles/utils";
 
 .DetailWrapper {
-	margin-top: 18px;
+	// margin-top: 18px;
 }
 
 .DetailDisplay {
@@ -11,9 +11,10 @@
 	// grid-row-gap: 5px;
 	// grid-column-gap: 5px;
 	display: flex;
-	justify-content: space-around;
-	padding: 16px 16px 16px 0;
-	height: 160px;
+	justify-content: space-evenly;
+	padding: 0;
+	height: 10em;
+	margin-top: 20px;
 	@include media("<medium") {
 		padding: 0px;
 		justify-content: space-between;
@@ -24,7 +25,7 @@
 		padding: 20px 12px;
 		background: #f9f9f9;
 		border-radius: 6px;
-		width: 140px;
+		width: 152px;
 		@include media("<medium") {
 			background-color: #fff;
 			width: 49%;
